syntax = "proto3";

package event;

option go_package = "path/to/your/repo/api/proto/event;eventpb";

import "google/protobuf/timestamp.proto";

service EventService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse);
    rpc GetEvent(GetEventRequest) returns (GetEventResponse);
}

message CreateEventRequest {
    string name = 1;
    string location = 2;
    google.protobuf.Timestamp date = 3;
}

message CreateEventResponse {
    string id = 1;
    string message = 2;
}

message GetEventRequest {
    string id = 1;
}

message GetEventResponse {
    string id = 1;
    string name = 2;
    string location = 3;
    google.protobuf.Timestamp date = 4;
}
